--- a/main.css
+++ b/main.css
@@ -72,7 +72,20 @@ tbody tr:hover td:hover {
 }
 
 .blocked {
-    background-color: #ddd !important;
+
+    background-image: linear-gradient(
+        45deg,
+        #ddd 25%,
+        transparent 25%,
+        transparent 50%,
+        #ddd 50%, 
+        #ddd 75%, 
+        transparent 75%, 
+        transparent 100% 
+    );
+    background-size: 20px 20px;
+
+    box-shadow: inset 0px 0px 0px 2px #ddd;
 }
 
 .container {
