--- a/main.css
+++ b/main.css
@@ -73,6 +73,13 @@ tbody tr:hover td:hover {
     box-shadow: inset 0px 0px 0px 2px #EF368A;
 }
 
+.note {
+    font-size: smaller;
+    font-weight: bold;
+    color: #EF368A;
+    padding-left: 10px;
+}
+
 .blocked {
     background-image: linear-gradient(
         45deg,
