shows hours schedules against hours aimed for next to each employee as you select them

--- a/main.css
+++ b/main.css
@@ -131,3 +131,20 @@ li:hover {
     box-sizing: border-box;
     color: white;
 }
+
+.under, .same, .over {
+    font-size: small; 
+    font-weight: bold; 
+}
+
+.under {
+    color: white;
+}
+
+.same {
+    color: #ffcccb; 
+}
+
+.over {
+    color: black;
+}
